# Multimodal-Document-Chatbot

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: llm.py
src/evaluate/: deepeval_test.py
src/pipelines/: custom_components.py  indexing.py  query.py  utils.py
src/user_interface/: chat_interface.py
