[project]
name = "Multimodal_Document_Chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=3.3.5",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "haystack-ai>=2.16",
    "langfuse-haystack>=2.2.0",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "ollama>=0.5.1",
    "ollama-haystack>=3.4.0",
    "pypdf>=5.9.0",
    "python-pptx>=1.0.2",
    "chroma-haystack>=0.20.0",
    "streamlit>=1.47.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.0",
    "isort>=6.0.1",
    "nbqa>=1.9.1",
]
